--- a/assignment4/src/main/resources/templates/admin/user.html
+++ b/assignment4/src/main/resources/templates/admin/user.html
@@ -387,7 +387,8 @@
   <!--custom script for all page-->
   <script src="/resources/js/scripts.js" type="text/javascript"></script>
   <script src="/resources/js/validate.js" type="text/javascript"></script>
-  <script src="/resources/js/MyJSonAjax.js" type="text/javascript"></script> 
+  <script src="/resources/js/JsonUser.js" type="text/javascript"></script>
+  <script src="/resources/js/JsonBook.js" type="text/javascript"></script>  
   
  
 </body>
