--- a/assignment4/src/main/resources/templates/admin/book.html
+++ b/assignment4/src/main/resources/templates/admin/book.html
@@ -46,7 +46,7 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 </head>
 
 <body>
-<input id="checkAdmin" type="hidden" sec:authorize="hasRole('ROLE_ADMIN')" value="isAdmin"/>
+<input id="checkUser" type="hidden" sec:authorize="hasRole('ROLE_USER')" value="isUser"/>
   <!-- container section start -->
   <section id="container" class="">
     <!--header start-->
@@ -161,11 +161,6 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
         <div class="row">
           <div class="col-lg-12">
             <section class="panel">
-              <div style="margin-left: 10px" sec:authorize="hasAnyRole('ROLE_USER','ROLE_ADMIN')">
-               <br>
-             	 <a class="btn btn-primary" href="javascript:void(0)" onclick="document.getElementById('viewFormAddBook').style.display='block'"><i class="icon_plus_alt2"></i> ADD NEW BOOK</a>   
-				<br>
-			  </div>
              <div id="msgResult" style="margin-left: 10px;color: blue; font-size: 20px; font-weight: bold;">  </div><br>
               <div id="result">
               <table class="table table-striped table-advance table-hover">
@@ -175,7 +170,7 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
                     <th><i class=""></i>Author</th>
                     <th><i class=""></i>Date created</th>
                     <th><i class=""></i>Date updated</th>
-                    <th sec:authorize="hasAnyRole('ROLE_ADMIN')"><i class=""></i>Enable</th>
+                    <th sec:authorize="hasAnyRole('ROLE_ADMIN')"><i class=""></i>Status</th>
                     <th ><i class="" ></i> Action</th>
                   </tr>
                   <tr th:each="listBook : ${listBook}">
@@ -201,59 +196,22 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
           </div>
         </div>
         <!-- page end-->
+        
+        <div class="btn-row">
+            <div class="btn-group">
+              <!-- <button class="btn btn-default" type="button">Previous</button> -->
+              
+              <button class="btn btn-primary" type="button">1</button>
+              <button class="btn btn-default" type="button">2</button>
+             <!--  <button class="btn btn-default" type="button">Next</button> -->
+            </div>
+        </div>
+        
       </section>
     </section>
   </section>
   
-  <div id="viewFormAddBook" class="modal text-center" sec:authorize="hasAnyRole('ROLE_USER','ROLE_ADMIN')">
-           <form class="modal-content animate" id="formAddBook"  name="formAddBook">
-           <div class="">
-						<button type="button" class="close" onclick="document.getElementById('viewFormAddBook').style.display='none'" >&times;</button>
-			</div> 
-           <br><h3>ADD NEW BOOK</h3><br>
-        <table style=" width:100%"  class="">
-        <tr>
-          <td><label ><b>Title<span style="color: red">(*)</span></b></label></td>
-          <td><input autofocus type="text" name="title" id="title" class="form-control" autocomplete="title"></td>
-         </tr>
-          <tr>
-          <td><br></td>
-          <td><br></td>
-         </tr>
-         <tr>
-          <td><label><b>Author<span style="color: red">(*)</span></b></label></td>
-          <td><input type="text" name="author" id="author" class="form-control" autocomplete="author"></td>
-         </tr>
-          <tr>
-          <td><br></td>
-          <td><br></td>
-         </tr>
-         <tr>
-          <td><label><b>Description</b></label></td>
-          <td>
-          	<textarea style="margin: 0px; height: 200px;" name="description" cols="30" id="description" class="form-control"></textarea>
-          </td>    
-         </tr>
-          <tr>
-          <td><br></td>
-          <td><br></td>
-         </tr>
-         <tr>
-          <td></td>
-          <td>
-            <input type="submit" value="ADD BOOK" class="btn btn-primary">
-            <input type="button" value="CANCEL" class="btn btn-danger"
-              onclick="document.getElementById('viewFormAddBook').style.display='none'">
-            
-          </td>
-         </tr>
-          <tr>
-          <td><br></td>
-          <td><br></td>
-         </tr>
-        </table>
-       </form>
-    </div>
+  
     
      <div id="viewFormEditBook" class="modal text-center" sec:authorize="hasAnyRole('ROLE_USER','ROLE_ADMIN')">
            <form class="modal-content animate" id="formEditBook"  name="formEditBook">
@@ -323,11 +281,11 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
   <script src="/resources/js/jquery.nicescroll.js" type="text/javascript"></script>
   <!--custome script for all page-->
   <script src="/resources/js/scripts.js"></script>
-  <!-- <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.css"> -->
   
   <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.js"></script>
   <script src="/resources/js/validate.js" type="text/javascript"></script>
-  <script src="/resources/js/MyJSonAjax.js" type="text/javascript"></script> 
+  <script src="/resources/js/JsonUser.js" type="text/javascript"></script>
+  <script src="/resources/js/JsonBook.js" type="text/javascript"></script>   
 </body>
 
 </html>
