--- a/assignment4/src/main/resources/templates/admin/book.html
+++ b/assignment4/src/main/resources/templates/admin/book.html
@@ -196,16 +196,61 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
           </div>
         </div>
         <!-- page end-->
-        
-        <div class="btn-row">
-            <div class="btn-group">
-              <!-- <button class="btn btn-default" type="button">Previous</button> -->
-              
-              <button class="btn btn-primary" type="button">1</button>
-              <button class="btn btn-default" type="button">2</button>
-             <!--  <button class="btn btn-default" type="button">Next</button> -->
-            </div>
+         
+      <!--    <div class="row">
+        <div class="form-group col-md-1">
+            <select class="form-control pagination" id="pageSizeSelect">
+                <option  value="4"
+                        selected="selected">4</option>
+                        <option  value="4"
+                        selected="selected">4</option>
+            </select>
         </div>
+        <div  class="form-group col-md-11 pagination-centered">
+            <ul class="pagination">
+                <li >
+                    <a class="pageLink"
+                       href="">&raquo;</a>
+                </li>
+                 <li >
+                    <a class="pageLink"
+                       href="">1</a>
+                </li>
+            </ul>
+        </div>
+    </div> -->
+    
+     <div class="row">
+        <div class="form-group col-md-1">
+            <select class="form-control pagination" id="pageSizeSelect">
+                <option th:each="pageSize : ${pageSizes}" th:text="${pageSize}" th:value="${pageSize}"
+                        th:selected="${pageSize} == ${selectedPageSize}"></option>
+            </select>
+        </div>
+        <div th:if="${listBook.totalPages != 1}" class="form-group col-md-11 pagination-centered">
+            <ul class="pagination">
+                <li th:class="${listBook.number == 0} ? disabled">
+                    <a class="pageLink" th:href="@{/(pageSize=${selectedPageSize}, page=1)}">&laquo;</a>
+                </li>
+                <li th:class="${listBook.number == 0} ? disabled">
+                    <a class="pageLink" th:href="@{/(pageSize=${selectedPageSize}, page=${listBook.number})}">&larr;</a>
+                </li>
+                <li th:class="${listBook.number == (page - 1)} ? 'active pointer-disabled'"
+                    th:each="page : ${#numbers.sequence(pager.startPage, pager.endPage)}">
+                    <a class="pageLink" th:href="@{/(pageSize=${selectedPageSize}, page=${page})}"
+                       th:text="${page}"></a>
+                </li>
+                <li th:class="${listBook.number + 1 == listBook.totalPages} ? disabled">
+                    <a class="pageLink"
+                       th:href="@{/(pageSize=${selectedPageSize}, page=${listBook.number + 2})}">&rarr;</a>
+                </li>
+                <li th:class="${listBook.number + 1 == listBook.totalPages} ? disabled">
+                    <a class="pageLink"
+                       th:href="@{/(pageSize=${selectedPageSize}, page=${listBook.totalPages})}">&raquo;</a>
+                </li>
+            </ul>
+        </div>
+    </div>
         
       </section>
     </section>
@@ -285,7 +330,8 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
   <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.js"></script>
   <script src="/resources/js/validate.js" type="text/javascript"></script>
   <script src="/resources/js/JsonUser.js" type="text/javascript"></script>
-  <script src="/resources/js/JsonBook.js" type="text/javascript"></script>   
+  <script src="/resources/js/JsonBook.js" type="text/javascript"></script> 
+  <script src="/resources/js/page.js" type="text/javascript"></script>   
 </body>
 
 </html>
