--- a/assignment4/src/main/resources/templates/admin/detailBook.html
+++ b/assignment4/src/main/resources/templates/admin/detailBook.html
@@ -36,11 +36,11 @@
       <div class="top-nav notification-row">
         <!-- notificatoin dropdown start-->
         <ul class="nav pull-right top-menu">
-			 <li id="task_notificatoin_bar" class="dropdown" sec:authorize="isAnonymous()">
+			 <li class="dropdown" sec:authorize="isAnonymous()">
             <a class="" href="#"><i class="icon_pencil-edit"></i> Sign up
             </a>
           </li>
-          <li id="task_notificatoin_bar" class="dropdown" sec:authorize="isAnonymous()">
+          <li  class="dropdown" sec:authorize="isAnonymous()">
             <a href="/show-login"><i class="icon_lock_alt"></i> Sign in
             </a>
           </li>
