--- a/assignment4/src/main/resources/templates/admin/user.html
+++ b/assignment4/src/main/resources/templates/admin/user.html
@@ -269,7 +269,7 @@
           <td></td>
           <td>
             <input type="submit" value="ADD USER" class="btn btn-primary">
-            <input type="button" value="CANCEL" class="btn btn-danger"
+            <input type="reset" value="CANCEL" class="btn btn-danger"
               onclick="document.getElementById('viewFormAddUser').style.display='none'">
             
           </td>
@@ -354,7 +354,7 @@
           <td></td>
           <td>
             <input type="submit" value="UPDATE" class="btn btn-primary">
-            <input type="button" value="CANCEL" class="btn btn-danger"
+            <input type="reset" value="CANCEL" class="btn btn-danger"
               onclick="document.getElementById('viewFormEditUser').style.display='none'">
             
           </td>
